# Harvx

./: .editorconfig  .gitignore  .golangci.yml  .goreleaser.yaml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  go.mod  go.sum  run_pipeline_checks.sh
.claude/agents/: frontend-engineer.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  security.yml
cmd/harvx/: main.go  main_test.go
docs/: SECURITY.md
docs/guides/: golden-questions.md  mcp-integration.md  review-pipeline.md  session-bootstrap.md  workspace-setup.md
docs/prd/: PRD-Harvx.md
docs/recipes/: ci-integration.md  pipeline-review.md  quick-context.md
docs/tasks/: INDEX.md  PHASE-2-INDEX.md  PHASE-3-COMPRESSION-INDEX.md  PHASE-3-SECURITY-INDEX.md  PHASE-4-INDEX.md  PHASE-5-INDEX.md  PHASE-8-INDEX.md  PROGRESS.md  T-001-go-project-init.md  T-002-makefile-setup.md  T-003-central-data-types.md  T-004-structured-logging.md  T-005-cobra-cli-root-cmd.md  T-006-version-command.md  T-007-global-flags.md  T-008-generate-subcommand.md  (+89 more)
grammars/: README.md  embed.go
scripts/: RALPH-PROMPT-CODEX.md  RALPH-PROMPT.md  fetch-grammars.sh  fetch_grammars.go  phase-pipeline.sh  ralph-lib.sh  ralph_claude.sh  ralph_codex.sh  task-state-lib.sh  test_loop_recovery.sh  test_phase_pipeline.sh  test_rate_limit_recovery.sh  test_recovery.sh  test_review.sh
testdata/compression/toml/: cargo.toml  pyproject.toml  simple.toml
testdata/oss-python-fastapi/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
testdata/oss-python-fastapi/app/: __init__.py  config.py  models.py
testdata/oss-python-fastapi/app/routes/: items.py  users.py
testdata/oss-python-fastapi/app/services/: user_service.py
testdata/oss-python-fastapi/app/utils/: helpers.py
testdata/oss-python-fastapi/tests/: __init__.py  test_users.py
(+630 files in other folders)
